# vibe303

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: AccentSlide.h  AcidEnvelope.h  AcidFilter.cpp  AcidFilter.h  LFO.h  Oscillator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.h
scripts/: build-linux.sh  build-mac.sh  build-windows.bat
